# bookstore

./: README.md  alteracoes.txt  db.sqlite3  pyproject.toml
bookstore/: README.md  asgi.py  manage.py  pyproject.toml  settings.py
bookstore/bookstoreapp/: settings.py  urls.py  wsgi.py
bookstore/order/: factories.py
bookstore/order/migrations/: 0001_initial.py
bookstore/order/models/: order.py
bookstore/product/: factories.py
bookstore/product/migrations/: 0001_initial.py
bookstore/product/models/: product.py
bookstore/product/tests/test_serializers/: test_product_serializer.py
